--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,12 @@
                         <div class="media-body">
                             <div class="personal_text">
                                 <h6>Hello Everybody, i am</h6>
-                                <h3>Ahmet Kadir ÖZEN</h3>
-                                <h4>Junior Electrical Electronics Engineer</h4>
-                                <p>I am currently studying Electrical and Electronics Engineering at Piri Reis University.</p>
+                                <h3>{{ home_banner_name }}</h3>
+                                <h4>{{ home_banner_title }}</h4>
+                                <p>{{ home_banner_description }}</p>
                                 <ul class="list basic_info">
                                     <li><a href="javascript:void(0)"><i class="lnr lnr-calendar-full"></i> 01st August, 1998</a></li>
-                                    <li><a href="tel:+905065275453"><i class="lnr lnr-phone-handset"></i> 05065275453</a></li>
+                                    <li><a href="tel:+905065275453"><i class="lnr lnr-phone-handset"></i> +90 506 527 5453</a></li>
                                     <li><a href="mailto:ahmetkadirozen@hotmail.com"><i class="lnr lnr-envelope"></i>ahmetkadirozen@hotmail.com</a></li>
                                     <li><a href="javascript:void(0)"><i class="lnr lnr-home"></i> İstanbul/Pendik </a></li>
                                 </ul>
@@ -51,10 +51,7 @@
                 <div class="col-lg-6">
                     <div class="welcome_text">
                         <h4>About Myself</h4>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards especially in the workplace. That’s why it’s crucial that, as women, our behavior
-                            on
-                            the job is beyond reproach. inappropriate behavior is often laughed.</p>
+                        <p>{{ about_myself_welcome }}</p>
                        
                     </div>
                 </div>
