refactor: apply image setting

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
                     <div class="media">
                         <div class="d-flex">
-                            <img src="{% get_media_prefix %}img/Ahmets (1).jpeg" alt="">
+                            <img src="{{ home_banner_image.url }}" alt="">
                         </div>
                         <div class="media-body">
                             <div class="personal_text">
