--- a/templates/index.html
+++ b/templates/index.html
@@ -58,56 +58,26 @@
                 <div class="col-lg-6">
                     <div class="tools_expert">
                         <div class="skill_main">
+
+
+
+                            {% for skill in skills %}
                             <div class="skill_item">
-                                <h4>C++ <span class="counter">75</span>%</h4>
+                                <h4>{{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="75"
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ skill.percentage }}"
                                              aria-valuemin="0"
                                              aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="skill_item">
-                                <h4>Unity <span class="counter">70</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                                             aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>Django <span class="counter">80</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                                             aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>Multisim <span class="counter">85</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85"
-                                             aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>AutoCAD <span class="counter">90</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90"
-                                             aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
+                            {% endfor %}
+
+
+
+
+
                         </div>
                     </div>
                 </div>
