--- a/templates/index.html
+++ b/templates/index.html
@@ -22,15 +22,22 @@
                                 <h4>{{ home_banner_title }}</h4>
                                 <p>{{ home_banner_description }}</p>
                                 <ul class="list basic_info">
-                                    <li><a href="javascript:void(0)"><i class="lnr lnr-calendar-full"></i> 01st August, 1998</a></li>
-                                    <li><a href="tel:+905065275453"><i class="lnr lnr-phone-handset"></i> +90 506 527 5453</a></li>
-                                    <li><a href="mailto:ahmetkadirozen@hotmail.com"><i class="lnr lnr-envelope"></i>ahmetkadirozen@hotmail.com</a></li>
-                                    <li><a href="javascript:void(0)"><i class="lnr lnr-home"></i> İstanbul/Pendik </a></li>
+                                    <li><a href="javascript:void(0)"><i class="lnr lnr-calendar-full"></i> 01st August,
+                                        1998</a></li>
+                                    <li><a href="tel:+905065275453"><i class="lnr lnr-phone-handset"></i> +90 506 527
+                                        5453</a></li>
+                                    <li><a href="mailto:ahmetkadirozen@hotmail.com"><i class="lnr lnr-envelope"></i>ahmetkadirozen@hotmail.com</a>
+                                    </li>
+                                    <li><a href="javascript:void(0)"><i class="lnr lnr-home"></i> İstanbul/Pendik </a>
+                                    </li>
                                 </ul>
                                 <ul class="list personal_social">
-                                    <li><a href="https://www.facebook.com/ahmetkadir.ozen.9"target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="https://twitter.com/AhmetKadirozen"target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/ahmetkadir%C3%B6zen/"target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.facebook.com/ahmetkadir.ozen.9" target="_blank"><i
+                                            class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://twitter.com/AhmetKadirozen" target="_blank"><i
+                                            class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/ahmetkadir%C3%B6zen/" target="_blank"><i
+                                            class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -52,7 +59,7 @@
                     <div class="welcome_text">
                         <h4>About Myself</h4>
                         <p>{{ about_myself_welcome }}</p>
-                       
+
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -60,22 +67,19 @@
                         <div class="skill_main">
 
 
-
                             {% for skill in skills %}
-                            <div class="skill_item">
-                                <h4>{{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ skill.percentage }}"
-                                             aria-valuemin="0"
-                                             aria-valuemax="100"></div>
+                                <div class="skill_item">
+                                    <h4>{{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
+                                    <div class="progress_br">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar"
+                                                 aria-valuenow="{{ skill.percentage }}"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
                             {% endfor %}
-
-
-
 
 
                         </div>
@@ -103,42 +107,30 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <ul class="list">
-                            <li>
-                                <span></span>
-                                <div class="media">
-                                    <div class="d-flex">
-                                        <p>March 2017 to present</p>
+
+                            {% for experience in experiences %}
+                                <li>
+                                    <span></span>
+                                    <div class="media">
+                                        <div class="d-flex">
+                                            <p>{{ experience.start_date|date:"M Y" }} -
+                                                {% if experience.end_date %}
+                                                    {{ experience.end_date|date:"M Y" }}
+                                                {% else %}
+                                                    present
+                                                {% endif %}
+
+                                            </p>
+                                        </div>
+                                        <div class="media-body">
+                                            <h4>{{ experience.company_name }}</h4>
+                                            <p>{{ experience.job_title }} <br/>{{ experience.job_location }}</p>
+                                        </div>
                                     </div>
-                                    <div class="media-body">
-                                        <h4>Colorlib</h4>
-                                        <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <span></span>
-                                <div class="media">
-                                    <div class="d-flex">
-                                        <p>March 2017 to present</p>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4>Colorlib</h4>
-                                        <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <span></span>
-                                <div class="media">
-                                    <div class="d-flex">
-                                        <p>March 2017 to present</p>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4>Colorlib</h4>
-                                        <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                    </div>
-                                </div>
-                            </li>
+                                </li>
+                            {% endfor %}
+
+
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
@@ -187,9 +179,9 @@
     </section>
     <!--================End My Tabs Area =================-->
 
-  
 
-   
+
+
 
 {% endblock %}
 
